--- a/samples/bluetooth/peripheral_hids/prj.conf
+++ b/samples/bluetooth/peripheral_hids/prj.conf
@@ -10,11 +10,18 @@ CONFIG_BT_BAS=y
 CONFIG_BT_DEVICE_NAME="Test HoG mouse"
 CONFIG_BT_DEVICE_APPEARANCE=962
 
-CONFIG_BT_SETTINGS=y
-CONFIG_FLASH=y
-CONFIG_FLASH_PAGE_LAYOUT=y
-CONFIG_FLASH_MAP=y
-CONFIG_NVS=y
-CONFIG_SETTINGS=y
+# CONFIG_BT_SETTINGS=y
+# CONFIG_FLASH=y
+# CONFIG_FLASH_PAGE_LAYOUT=y
+# CONFIG_FLASH_MAP=y
+# CONFIG_NVS=y
+# CONFIG_SETTINGS=y
 
 CONFIG_GPIO=y
+CONFIG_SPI=y
+CONFIG_BT_SPI=y
+CONFIG_BT_CTLR=n
+
+CONFIG_TIMING_FUNCTIONS=y
+
+CONFIG_LOG_PRINTK=y
