--- a/subsys/bluetooth/services/ots/Kconfig
+++ b/subsys/bluetooth/services/ots/Kconfig
@@ -79,10 +79,10 @@ if BT_OTS_CLIENT
 
 # TODO: Unify logging for OTS server and client - the client uses
 # "BT" debugging, the server does not.
-config BT_DEBUG_OTS_CLIENT
-	bool "Object Transfer Service Client debug"
-	help
-	  Use this option to enable Object Transfer Client debug logs
+parent-module = BT
+module = BT_OTS_CLIENT
+module-str = "Object Transfer Service Client"
+source "${ZEPHYR_BASE}/subsys/logging/Kconfig.template.log_config_inherit"
 
 endif # BT_OTS_CLIENT
 
