--- a/subsys/bluetooth/crypto/Kconfig
+++ b/subsys/bluetooth/crypto/Kconfig
@@ -9,7 +9,19 @@ config BT_CRYPTO
 	help
 	  This option enables the Bluetooth Cryptographic Toolbox.
 
-parent-module = BT
+config BT_DEBUG_CRYPTO
+	bool "Bluetooth Cryptographic Toolbox debug"
+	select DEPRECATED
+	depends on BT_CRYPTO
+	help
+	  This option enables debug log output for the Bluetooth
+	  Cryptographic Toolbox.
+
+	  WARNING: This option prints out private security keys such as
+	  the Long Term Key.
+	  Use of this feature in production is strongly discouraged.
+
 module = BT_CRYPTO
+legacy-debug-sym = BT_DEBUG_CRYPTO
 module-str = "Bluetooth Cryptographic Toolbox"
-source "${ZEPHYR_BASE}/subsys/logging/Kconfig.template.log_config_inherit"
+source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
