--- a/subsys/bluetooth/host/Kconfig
+++ b/subsys/bluetooth/host/Kconfig
@@ -831,10 +831,16 @@ config BT_DF_VS_CONN_IQ_REPORT_16_BITS_IQ_SAMPLES
 	  extenstion to handle connection IQ report with samples that are in 16 bit signed integer
 	  format.
 
-parent-module = BT
+config BT_DEBUG_DF
+	bool "Bluetooth Direction Finding debug"
+	select DEPRECATED
+	help
+	  This option enables debug support for Bluetooth Direction Finding
+
 module = BT_DF
+legacy-debug-sym = BT_DEBUG_DF
 module-str = "Bluetooth Direction Finding"
-source "${ZEPHYR_BASE}/subsys/logging/Kconfig.template.log_config_inherit"
+source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
 
 endif # BT_DF
 endif # BT_HCI_HOST
@@ -884,25 +890,54 @@ config BT_PER_ADV_SYNC_BUF_SIZE
 
 if BT_DEBUG
 
-parent-module = BT
+config BT_DEBUG_SETTINGS
+	bool "Bluetooth storage debug"
+	select DEPRECATED
+	depends on BT_SETTINGS
+	help
+	  This option enables debug support for Bluetooth storage.
+
 module = BT_SETTINGS
+legacy-debug-sym = BT_DEBUG_SETTINGS
 module-str = "Bluetooth storage"
-source "${ZEPHYR_BASE}/subsys/logging/Kconfig.template.log_config_inherit"
+source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
 
-parent-module = BT
+config BT_DEBUG_HCI_CORE
+	bool "Bluetooth HCI core debug"
+	select DEPRECATED
+	help
+	  This option enables debug support for Bluetooth HCI
+	  core.
+
 module = BT_HCI_CORE
+legacy-debug-sym = BT_DEBUG_HCI_CORE
 module-str = "Bluetooth HCI core"
-source "${ZEPHYR_BASE}/subsys/logging/Kconfig.template.log_config_inherit"
+source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
 
-parent-module = BT
+config BT_DEBUG_CONN
+	bool "Bluetooth connection debug"
+	select DEPRECATED
+	depends on BT_CONN || BT_ISO
+	help
+	  This option enables debug support for Bluetooth
+	  connection handling.
+
 module = BT_CONN
+legacy-debug-sym = BT_DEBUG_CONN
 module-str = "Bluetooth connection"
-source "${ZEPHYR_BASE}/subsys/logging/Kconfig.template.log_config_inherit"
+source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
 
-parent-module = BT
+config BT_DEBUG_ISO
+	bool "ISO channel debug"
+	select DEPRECATED
+	help
+	  Use this option to enable ISO channels debug logs for the
+	  Bluetooth Audio functionality.
+
 module = BT_ISO
+legacy-debug-sym = BT_DEBUG_ISO
 module-str = "ISO channel"
-source "${ZEPHYR_BASE}/subsys/logging/Kconfig.template.log_config_inherit"
+source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
 
 config BT_DEBUG_ISO_DATA
 	bool "ISO channel data debug"
@@ -912,15 +947,41 @@ config BT_DEBUG_ISO_DATA
 	  Bluetooth Audio functionality. This will enable debug logs for all
 	  ISO data received and sent.
 
-parent-module = BT
-module = BT_KEYS
-module-str = "Bluetooth security keys"
-source "${ZEPHYR_BASE}/subsys/logging/Kconfig.template.log_config_inherit"
+config BT_DEBUG_KEYS
+	bool "Bluetooth security keys debug"
+	select DEPRECATED
+	depends on BT_HCI_HOST
+	depends on BT_SMP
+	help
+	  This option enables debug support for the handling of
+	  Bluetooth security keys.
 
-parent-module = BT
+	  WARNING: This option prints out private security keys such as
+	  the Long Term Key.
+	  Use of this feature in production is strongly discouraged.
+
+module = BT_KEYS
+legacy-debug-sym = BT_DEBUG_KEYS
+module-str = "Bluetooth security keys"
+source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
+
+config BT_DEBUG_SMP
+	bool "Bluetooth Security Manager Protocol (SMP) debug"
+	select DEPRECATED
+	depends on BT_HCI_HOST
+	depends on BT_SMP
+	help
+	  This option enables debug support for the Bluetooth
+	  Security Manager Protocol (SMP).
+
+	  WARNING: This option prints out private security keys such as
+	  the Long Term Key.
+	  Use of this feature in production is strongly discouraged.
+
 module = BT_SMP
+legacy-debug-sym = BT_DEBUG_SMP
 module-str = "Bluetooth Security Manager Protocol"
-source "${ZEPHYR_BASE}/subsys/logging/Kconfig.template.log_config_inherit"
+source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
 
 config BT_SMP_SELFTEST
 	bool "Bluetooth SMP self tests executed on init"
@@ -937,35 +998,82 @@ config BT_SMP_FORCE_BREDR
 	  supporting BR/EDR Secure Connections. This option is solely for
 	  testing and should never be enabled on production devices.
 
-parent-module = BT
+config BT_DEBUG_RFCOMM
+	bool "Bluetooth RFCOMM debug"
+	select DEPRECATED
+	depends on BT_RFCOMM
+	help
+	  This option enables debug support for the Bluetooth
+	  RFCOMM layer.
+
 module = BT_RFCOMM
+legacy-debug-sym = BT_DEBUG_RFCOMM
 module-str = "Bluetooth RFCOMM"
-source "${ZEPHYR_BASE}/subsys/logging/Kconfig.template.log_config_inherit"
+source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
 
-parent-module = BT
+config BT_DEBUG_HFP_HF
+	bool "Bluetooth Hands Free Profile (HFP) debug"
+	select DEPRECATED
+	depends on BT_HFP_HF
+	help
+	  This option enables debug support for the Bluetooth
+	  Hands Free Profile (HFP).
+
 module = BT_HFP_HF
+legacy-debug-sym = BT_DEBUG_HFP_HF
 module-str = "Bluetooth Hands Free Profile (HFP)"
-source "${ZEPHYR_BASE}/subsys/logging/Kconfig.template.log_config_inherit"
+source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
 
-parent-module = BT
+config BT_DEBUG_AVDTP
+	bool "Bluetooth AVDTP debug"
+	select DEPRECATED
+	depends on BT_AVDTP
+	help
+	  This option enables debug support for the Bluetooth AVDTP.
+
 module = BT_AVDTP
+legacy-debug-sym = BT_DEBUG_AVDTP
 module-str = "Bluetooth AVDTP debug"
-source "${ZEPHYR_BASE}/subsys/logging/Kconfig.template.log_config_inherit"
+source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
 
-parent-module = BT
+config BT_DEBUG_A2DP
+	bool "Bluetooth A2DP debug"
+	select DEPRECATED
+	depends on BT_A2DP
+	help
+	  This option enables debug support for the Bluetooth
+	  A2DP profile.
+
 module = BT_A2DP
+legacy-debug-sym = BT_DEBUG_A2DP
 module-str = "Bluetooth A2DP"
-source "${ZEPHYR_BASE}/subsys/logging/Kconfig.template.log_config_inherit"
+source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
 
-parent-module = BT
+config BT_DEBUG_SDP
+	bool "Bluetooth Service Discovery Protocol (SDP) debug"
+	select DEPRECATED
+	depends on BT_BREDR
+	help
+	  This option enables debug support for the Bluetooth
+	  Service Discovery Protocol (SDP).
+
 module = BT_SDP
+legacy-debug-sym = BT_DEBUG_SDP
 module-str = "Bluetooth Service Discovery Protocol (SDP)"
-source "${ZEPHYR_BASE}/subsys/logging/Kconfig.template.log_config_inherit"
+source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
 
-parent-module = BT
+config BT_DEBUG_SERVICE
+	bool "Bluetooth Services debug"
+	select DEPRECATED
+	depends on BT_CONN
+	help
+	  This option enables debug support for the Bluetooth
+	  Services.
+
 module = BT_SERVICE
+legacy-debug-sym = BT_DEBUG_SERVICE
 module-str = "Bluetooth Services"
-source "${ZEPHYR_BASE}/subsys/logging/Kconfig.template.log_config_inherit"
+source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
 
 endif # BT_DEBUG
 
