--- a/subsys/bluetooth/common/Kconfig
+++ b/subsys/bluetooth/common/Kconfig
@@ -382,7 +382,7 @@ config BT_DEBUG_HCI_DRIVER
 module = BT_HCI_DRIVER
 legacy-debug-sym = BT_DEBUG_HCI_DRIVER
 module-str = "Bluetooth HCI driver"
-source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
+source "subsys/bluetooth/common/Kconfig.template.log_config_bt"
 
 config BT_DEBUG_RPA
 	bool "Bluetooth Resolvable Private Address (RPA) debug"
@@ -395,6 +395,6 @@ config BT_DEBUG_RPA
 module = BT_RPA
 legacy-debug-sym = BT_DEBUG_RPA
 module-str = "Bluetooth Resolvable Private Address (RPA)"
-source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
+source "subsys/bluetooth/common/Kconfig.template.log_config_bt"
 
 endif # BT_DEBUG
