--- a/subsys/bluetooth/host/Kconfig
+++ b/subsys/bluetooth/host/Kconfig
@@ -840,7 +840,7 @@ config BT_DEBUG_DF
 module = BT_DF
 legacy-debug-sym = BT_DEBUG_DF
 module-str = "Bluetooth Direction Finding"
-source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
+source "subsys/bluetooth/common/Kconfig.template.log_config_bt"
 
 endif # BT_DF
 endif # BT_HCI_HOST
@@ -900,7 +900,7 @@ config BT_DEBUG_SETTINGS
 module = BT_SETTINGS
 legacy-debug-sym = BT_DEBUG_SETTINGS
 module-str = "Bluetooth storage"
-source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
+source "subsys/bluetooth/common/Kconfig.template.log_config_bt"
 
 config BT_DEBUG_HCI_CORE
 	bool "Bluetooth HCI core debug"
@@ -912,7 +912,7 @@ config BT_DEBUG_HCI_CORE
 module = BT_HCI_CORE
 legacy-debug-sym = BT_DEBUG_HCI_CORE
 module-str = "Bluetooth HCI core"
-source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
+source "subsys/bluetooth/common/Kconfig.template.log_config_bt"
 
 config BT_DEBUG_CONN
 	bool "Bluetooth connection debug"
@@ -925,7 +925,7 @@ config BT_DEBUG_CONN
 module = BT_CONN
 legacy-debug-sym = BT_DEBUG_CONN
 module-str = "Bluetooth connection"
-source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
+source "subsys/bluetooth/common/Kconfig.template.log_config_bt"
 
 config BT_DEBUG_ISO
 	bool "ISO channel debug"
@@ -937,7 +937,7 @@ config BT_DEBUG_ISO
 module = BT_ISO
 legacy-debug-sym = BT_DEBUG_ISO
 module-str = "ISO channel"
-source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
+source "subsys/bluetooth/common/Kconfig.template.log_config_bt"
 
 config BT_DEBUG_ISO_DATA
 	bool "ISO channel data debug"
@@ -963,7 +963,7 @@ config BT_DEBUG_KEYS
 module = BT_KEYS
 legacy-debug-sym = BT_DEBUG_KEYS
 module-str = "Bluetooth security keys"
-source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
+source "subsys/bluetooth/common/Kconfig.template.log_config_bt"
 
 config BT_DEBUG_SMP
 	bool "Bluetooth Security Manager Protocol (SMP) debug"
@@ -981,7 +981,7 @@ config BT_DEBUG_SMP
 module = BT_SMP
 legacy-debug-sym = BT_DEBUG_SMP
 module-str = "Bluetooth Security Manager Protocol"
-source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
+source "subsys/bluetooth/common/Kconfig.template.log_config_bt"
 
 config BT_SMP_SELFTEST
 	bool "Bluetooth SMP self tests executed on init"
@@ -1009,7 +1009,7 @@ config BT_DEBUG_RFCOMM
 module = BT_RFCOMM
 legacy-debug-sym = BT_DEBUG_RFCOMM
 module-str = "Bluetooth RFCOMM"
-source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
+source "subsys/bluetooth/common/Kconfig.template.log_config_bt"
 
 config BT_DEBUG_HFP_HF
 	bool "Bluetooth Hands Free Profile (HFP) debug"
@@ -1022,7 +1022,7 @@ config BT_DEBUG_HFP_HF
 module = BT_HFP_HF
 legacy-debug-sym = BT_DEBUG_HFP_HF
 module-str = "Bluetooth Hands Free Profile (HFP)"
-source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
+source "subsys/bluetooth/common/Kconfig.template.log_config_bt"
 
 config BT_DEBUG_AVDTP
 	bool "Bluetooth AVDTP debug"
@@ -1034,7 +1034,7 @@ config BT_DEBUG_AVDTP
 module = BT_AVDTP
 legacy-debug-sym = BT_DEBUG_AVDTP
 module-str = "Bluetooth AVDTP debug"
-source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
+source "subsys/bluetooth/common/Kconfig.template.log_config_bt"
 
 config BT_DEBUG_A2DP
 	bool "Bluetooth A2DP debug"
@@ -1047,7 +1047,7 @@ config BT_DEBUG_A2DP
 module = BT_A2DP
 legacy-debug-sym = BT_DEBUG_A2DP
 module-str = "Bluetooth A2DP"
-source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
+source "subsys/bluetooth/common/Kconfig.template.log_config_bt"
 
 config BT_DEBUG_SDP
 	bool "Bluetooth Service Discovery Protocol (SDP) debug"
@@ -1060,7 +1060,7 @@ config BT_DEBUG_SDP
 module = BT_SDP
 legacy-debug-sym = BT_DEBUG_SDP
 module-str = "Bluetooth Service Discovery Protocol (SDP)"
-source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
+source "subsys/bluetooth/common/Kconfig.template.log_config_bt"
 
 config BT_DEBUG_SERVICE
 	bool "Bluetooth Services debug"
@@ -1073,7 +1073,7 @@ config BT_DEBUG_SERVICE
 module = BT_SERVICE
 legacy-debug-sym = BT_DEBUG_SERVICE
 module-str = "Bluetooth Services"
-source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
+source "subsys/bluetooth/common/Kconfig.template.log_config_bt"
 
 endif # BT_DEBUG
 
