--- a/subsys/bluetooth/mesh/Kconfig
+++ b/subsys/bluetooth/mesh/Kconfig
@@ -959,7 +959,7 @@ config BT_MESH_DEBUG
 module = BT_MESH
 legacy-debug-sym = BT_MESH_DEBUG
 module-str = "Debug logs"
-source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
+source "subsys/bluetooth/common/Kconfig.template.log_config_bt"
 
 if BT_MESH_LOG_LEVEL_DBG
 
@@ -981,7 +981,7 @@ config BT_MESH_DEBUG_NET
 module = BT_MESH_NET
 legacy-debug-sym = BT_MESH_DEBUG_NET
 module-str = "Network layer"
-source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
+source "subsys/bluetooth/common/Kconfig.template.log_config_bt"
 
 config BT_MESH_DEBUG_RPL
 	bool "Replay protection list debug"
@@ -993,7 +993,7 @@ config BT_MESH_DEBUG_RPL
 module = BT_MESH_RPL
 legacy-debug-sym = BT_MESH_DEBUG_RPL
 module-str = "Replay protection list"
-source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
+source "subsys/bluetooth/common/Kconfig.template.log_config_bt"
 
 config BT_MESH_DEBUG_TRANS
 	bool "Transport layer debug"
@@ -1005,7 +1005,7 @@ config BT_MESH_DEBUG_TRANS
 module = BT_MESH_TRANS
 legacy-debug-sym = BT_MESH_DEBUG_TRANS
 module-str = "Transport layer"
-source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
+source "subsys/bluetooth/common/Kconfig.template.log_config_bt"
 
 config BT_MESH_DEBUG_BEACON
 	bool "Beacon debug"
@@ -1017,7 +1017,7 @@ config BT_MESH_DEBUG_BEACON
 module = BT_MESH_BEACON
 legacy-debug-sym = BT_MESH_DEBUG_BEACON
 module-str = "Beacon"
-source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
+source "subsys/bluetooth/common/Kconfig.template.log_config_bt"
 
 config BT_MESH_DEBUG_CRYPTO
 	bool "Crypto debug"
@@ -1029,7 +1029,7 @@ config BT_MESH_DEBUG_CRYPTO
 module = BT_MESH_CRYPTO
 legacy-debug-sym = BT_MESH_DEBUG_CRYPTO
 module-str = "Crypto"
-source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
+source "subsys/bluetooth/common/Kconfig.template.log_config_bt"
 
 config BT_MESH_DEBUG_KEYS
 	bool "Key management debug"
@@ -1041,7 +1041,7 @@ config BT_MESH_DEBUG_KEYS
 module = BT_MESH_KEYS
 legacy-debug-sym = BT_MESH_DEBUG_KEYS
 module-str = "Key management"
-source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
+source "subsys/bluetooth/common/Kconfig.template.log_config_bt"
 
 config BT_MESH_DEBUG_PROV
 	bool "Provisioning debug"
@@ -1053,7 +1053,7 @@ config BT_MESH_DEBUG_PROV
 module = BT_MESH_PROV
 legacy-debug-sym = BT_MESH_DEBUG_PROV
 module-str = "Provisioning"
-source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
+source "subsys/bluetooth/common/Kconfig.template.log_config_bt"
 
 config BT_MESH_DEBUG_PROVISIONER
 	bool "Provisioner debug"
@@ -1065,7 +1065,7 @@ config BT_MESH_DEBUG_PROVISIONER
 module = BT_MESH_PROVISIONER
 legacy-debug-sym = BT_MESH_DEBUG_PROVISIONER
 module-str = "Provisioner"
-source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
+source "subsys/bluetooth/common/Kconfig.template.log_config_bt"
 
 config BT_MESH_DEBUG_PROV_DEVICE
 	bool "Provisioning device debug"
@@ -1077,7 +1077,7 @@ config BT_MESH_DEBUG_PROV_DEVICE
 module = BT_MESH_PROV_DEVICE
 legacy-debug-sym = BT_MESH_DEBUG_PROV_DEVICE
 module-str = "Provisioning device"
-source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
+source "subsys/bluetooth/common/Kconfig.template.log_config_bt"
 
 config BT_MESH_DEBUG_ACCESS
 	bool "Access layer debug"
@@ -1089,7 +1089,7 @@ config BT_MESH_DEBUG_ACCESS
 module = BT_MESH_ACCESS
 legacy-debug-sym = BT_MESH_DEBUG_ACCESS
 module-str = "Access layer"
-source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
+source "subsys/bluetooth/common/Kconfig.template.log_config_bt"
 
 config BT_MESH_DEBUG_MODEL
 	bool "Foundation model debug"
@@ -1101,7 +1101,7 @@ config BT_MESH_DEBUG_MODEL
 module = BT_MESH_MODEL
 legacy-debug-sym = BT_MESH_DEBUG_MODEL
 module-str = "Foundation model"
-source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
+source "subsys/bluetooth/common/Kconfig.template.log_config_bt"
 
 config BT_MESH_DEBUG_ADV
 	bool "Advertising debug"
@@ -1113,7 +1113,7 @@ config BT_MESH_DEBUG_ADV
 module = BT_MESH_ADV
 legacy-debug-sym = BT_MESH_DEBUG_ADV
 module-str = "Advertising"
-source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
+source "subsys/bluetooth/common/Kconfig.template.log_config_bt"
 
 config BT_MESH_DEBUG_LOW_POWER
 	bool "Low Power debug"
@@ -1125,7 +1125,7 @@ config BT_MESH_DEBUG_LOW_POWER
 module = BT_MESH_LOW_POWER
 legacy-debug-sym = BT_MESH_DEBUG_LOW_POWER
 module-str = "Low Power"
-source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
+source "subsys/bluetooth/common/Kconfig.template.log_config_bt"
 
 config BT_MESH_DEBUG_FRIEND
 	bool "Friend debug"
@@ -1137,7 +1137,7 @@ config BT_MESH_DEBUG_FRIEND
 module = BT_MESH_FRIEND
 legacy-debug-sym = BT_MESH_DEBUG_FRIEND
 module-str = "Friend"
-source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
+source "subsys/bluetooth/common/Kconfig.template.log_config_bt"
 
 config BT_MESH_DEBUG_PROXY
 	bool "Proxy debug"
@@ -1149,7 +1149,7 @@ config BT_MESH_DEBUG_PROXY
 module = BT_MESH_PROXY
 legacy-debug-sym = BT_MESH_DEBUG_PROXY
 module-str = "Proxy"
-source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
+source "subsys/bluetooth/common/Kconfig.template.log_config_bt"
 
 config BT_MESH_DEBUG_SETTINGS
 	bool "Persistent settings debug"
@@ -1161,7 +1161,7 @@ config BT_MESH_DEBUG_SETTINGS
 module = BT_MESH_SETTINGS
 legacy-debug-sym = BT_MESH_DEBUG_SETTINGS
 module-str = "Persistent settings"
-source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
+source "subsys/bluetooth/common/Kconfig.template.log_config_bt"
 
 config BT_MESH_DEBUG_CDB
 	bool "Configuration database debug"
@@ -1173,7 +1173,7 @@ config BT_MESH_DEBUG_CDB
 module = BT_MESH_CDB
 legacy-debug-sym = BT_MESH_DEBUG_CDB
 module-str = "Configuration database"
-source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
+source "subsys/bluetooth/common/Kconfig.template.log_config_bt"
 
 config BT_MESH_DEBUG_CFG
 	bool "Configuration debug"
@@ -1185,7 +1185,7 @@ config BT_MESH_DEBUG_CFG
 module = BT_MESH_CFG
 legacy-debug-sym = BT_MESH_DEBUG_CFG
 module-str = "Configuration"
-source "${ZEPHYR_BASE}/subsys/bluetooth/common/Kconfig.template.log_config_bt"
+source "subsys/bluetooth/common/Kconfig.template.log_config_bt"
 
 endif # BT_MESH_LOG_LEVEL_DBG
 
